# sdr

./: README.rst  setup.cfg
sdr/: channel.py  ecc.py  map.py  mod.py
sdr/util/: argcheck.py  plot.py  pulse.py  random.py  stat.py  transform.py
tools/: format_code.sh  test_code.sh
