# #############################################################################
# setup.cfg
# =========
# Author : Sepand KASHANI [kashani.sepand@gmail.com]
# #############################################################################

[metadata]
name = sdr
summary = A collection of Python modules for Software-Defined Radio (SDR).
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Sepand KASHANI
author_email = kashani.sepand@gmail.com
license = BSD


[files]
packages =
    sdr


[options]
zip_safe = True
include_package_data = True
python_requires = >=3.9
install_requires =
    ipython == 7.25.*
    matplotlib == 3.4.*
    numpy == 1.21.*
    scipy == 1.7.*

[options.extras_require]
dev =
    black
    pytest == 6.2.*
